Overflow fix
Added overflow: scroll to the cards when page is resized small

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ h2 {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-style: normal;
+  overflow: scroll;
 }
 
 /* On mouse-over, add a deeper shadow */
